--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,8 @@ body{
 	color: #FAF3BC;
 	background: #420600 url('img/bg-texture.jpg') repeat;
 }
+
+a {
+	color: #4FB69F;
+	text-decoration: none;
+}
