--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ h2{
 	color: #FAF3BC;
 	background: #4FB69F url('img/texture.png') no-repeat right top;
 	padding: 15px 30px;
+	margin: 40px 0px;
+	border-radius: 25px;
+	text-transform: uppercase;
 }
 
 
