--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,12 @@ ul.nav li a {
 	color: #FAF3BC;
 }
 
+#intro {
+	margin: 50px 0 75px 0;
+}
+
+#new-cupcakes img {
+	border: 8px solid #FAF3BC;
+	margin: 0 0 20px 0;
+}
 
