--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,13 @@ ul.nav li a {
 	margin: 0 0 20px 0;
 }
 
+#featured-cupcakes img {
+	border: 8px solid #FAF3BC;
+}
+
+#copyright {
+	border_top: 8px solid #2A0400;
+	padding: 10px 0px;
+	margin:15px 0px;
+	text-align: center;
+}
