--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,8 @@ ul.nav li a {
 }
 
 #copyright {
-	border_top: 8px solid #2A0400;
-	padding: 10px 0px;
-	margin:15px 0px;
+	border-top: 8px solid #2A0400;
+	padding: 10px 0;
+	margin:15px 0;
 	text-align: center;
 }
